Fixed Home Page overflow-x glitch

--- a/css/style.css
+++ b/css/style.css
@@ -1260,8 +1260,8 @@ nav {
     font-size: 36px;
   }
   #filler p {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 85px;
+    margin-right: 85px;
   }
   #filler .button {
     margin-left: 86px;
